Changelog
=========

0.10.1 (unreleased)
-------------------

- Nothing changed yet.


0.10.0 (2011-04-27)
-------------------

* Replace print by python's logging
  [f10w]

* Indentation with 4 spaces in setuphandlers
  [f10w]

* Cleanup package-structure
  [f10w]

* Generic setup compliant install.
  [thomasdesvenain, f10w]

0.9.7 (2011-01-04)
-------------------

* Fixed wvware transform (was broken in 0.9.6)
  [thomasdesvenain]

* Plone 4 support in tests.
  [thomasdesvenain]

* Merge and cleanup changelogs
  [kdeldycke]

* Fix declaration of implemented interface to support both Plone 4 and Plone 3
  [kdeldycke]

0.9.6 (2010-12-23)
------------------

* Replace os.system (deprecated) by Popen
  [tbenita]

* New style interfaces for Plone 4 compatibility
  [hpeteragitator]

* Replace print by python's logging
  [toutpt]

0.9.4 - 2009-09-10
------------------

* Initial release on pypi
  [toutpt]

0.9.2
-----

* Added zip_to_text transformation
  [zegor]

0.9.1
-----

* cleanup (print, logs, comments)
* pdf_to_html command asks for utf-8