@@ -9,7 +9,9 @@ from subprocess import Popen
 from Products.PortalTransforms.libtransforms.utils import bin_search, \
      sansext, bodyfinder, scrubHTML
 from Products.PortalTransforms.libtransforms.commandtransform import commandtransform
+
 from Products.AROfficeTransforms import logger
+from Products.AROfficeTransforms.transforms import utils
 
 xmltag = '<?xml version="1.0" encoding="utf-8"?>\n'
 
@@ -38,6 +40,7 @@ class document(commandtransform):
         name = self.name()
         if not name.endswith('.doc'):
             name = name + ".doc"
+
         self.tmpdir, self.fullname = self.initialize_tmpdir(data, filename=name)
 
     def convert(self):
@@ -47,10 +50,14 @@ class document(commandtransform):
         # for windows, install wvware from GnuWin32 at C:\Program Files\GnuWin32\bin
         # you can use:
         # wvware.exe -c ..\share\wv\wvHtml.xml --charset=utf-8 -d d:\temp d:\temp\test.doc > test.html
+        if utils.command_exists('timelimit'):
+            timelimit = "timelimit -t120 -T10"
+        else:
+            timelimit = ""
 
         if os.name == 'posix':
-            command = 'cd "%s" && timelimit -t120 -T10 %s %s "%s" "%s.%s"' % (
-              tmpdir, self.binary, mimeoptmap[self.outmime], self.fullname,
+            command = 'cd "%s" && %s %s %s "%s" "%s.%s"' % (
+              tmpdir, timelimit, self.binary, mimeoptmap[self.outmime], self.fullname,
               self.__name__, mimeextmap[self.outmime],)
             logger.info(command)
             p = Popen(command,
